unpackaged/main/default/objects/AssignedResource/fields/ApptAssistUrl_Set_Time__c.field-meta.xml
<CustomField>
    <fullName>ApptAssistUrl_Set_Time__c</fullName>
    <description>The time at which the ApptAssistantInfoUrl field is populated. Used for debugging SMS issues - Chris .Y</description>
    <label>ApptAssistUrl Set Time</label>
    <type>DateTime</type>
</CustomField>