unpackaged/main/default/objects/AssignedResource/fields/Battery_Service_Link__c.field-meta.xml
<CustomField>
    <fullName>Battery_Service_Link__c</fullName>
    <defaultValue>&#39;https://AAA.com/BatteryVideo&#39;</defaultValue>
    <label>Battery Service Link</label>
    <type>Url</type>
</CustomField>