unpackaged/main/default/objects/AssignedResource/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <formula>ServiceAppointment.Service_Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Name</label>
    <type>Text</type>
</CustomField>