unpackaged/main/default/objects/AssignedResource/fields/EnRoute_Time__c.field-meta.xml
<CustomField>
    <fullName>EnRoute_Time__c</fullName>
    <description>The time at which the LocationStatus field is set to &quot;EnRoute&quot;. Used for debugging SMS issues - Chris .Y</description>
    <label>EnRoute Time</label>
    <type>DateTime</type>
</CustomField>