unpackaged/main/default/objects/AssignedResource/fields/Is_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Is_Breakdown__c</fullName>
    <formula>ServiceAppointment.isBreakdown__c</formula>
    <label>Is Breakdown</label>
    <type>Checkbox</type>
</CustomField>