unpackaged/main/default/objects/AssignedResource/fields/Service_Appointment_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Address__c</fullName>
    <formula>ServiceAppointment.Street + &quot;, &quot; +
 ServiceAppointment.City +  &quot;, &quot;+
ServiceAppointment.State +&quot;, &quot; +
 ServiceAppointment.PostalCode + &quot;, &quot; +
 ServiceAppointment.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Appointment Address</label>
    <type>Text</type>
</CustomField>