unpackaged/main/default/objects/AssignedResource/fields/Service_Appointment_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Territory__c</fullName>
    <formula>ServiceAppointment.Service_Territory_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Appointment Territory</label>
    <type>Text</type>
</CustomField>