unpackaged/main/default/objects/AssignedResource/fields/Tracker_Resource__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Resource__c</fullName>
    <formula>not(isblank(ServiceAppointment.Service_Resource__r.Tracker_Contact_old__c))</formula>
    <label>Tracker Resource</label>
    <type>Checkbox</type>
</CustomField>